# rfshare

./: .gitignore  Cargo.toml  LICENSE  README.md  auto_update_check.md  build.rs  makefile  rfshare.desktop
.github/workflows/: relay-release.yml  release.yml
relay/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
relay/scripts/nginx/: deploy
relay/src/: main.rs
scripts/: generate_license_key.py  install.ps1  install.sh
src/: main.rs  tray.rs
wix/: main.wxs
