[package]
name = "rfshare"
version = "0.10.0"
edition = "2024"
authors     = ["Imrany <imranmat254@gmail.com>"]
description = "Fast, encrypted file transfers"
homepage    = "https://rfshare.imrany.dev"
repository  = "https://github.com/imrany/rfshare"
license     = "MIT"
keywords    = ["file-transfer", "lan", "network", "encryption", "egui", "remote"]
categories  = ["network-programming", "gui"]
readme      = "README.md"

[[bin]]
name = "rfshare"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", features = ["default"] }
egui   = "0.33"
dirs   = "5"
rfd    = "0.15"   # native file-picker dialog
egui_extras = { version = "0.33.3", features = ["image"] }
egui_material_icons = "0.5.0"
# Crypto — end-to-end encryption
x25519-dalek = { version = "2", features = ["static_secrets"] }   # ECDH key exchange (X25519)
aes-gcm      = "0.10"                                              # AES-256-GCM authenticated encryption
rand         = "0.8"                                               # CSPRNG for nonce generation
sha2         = "0.10"                                              # SHA-256 for KDF
minreq = { version = "2.14.1", features = ["https"] }

# Windows: embed icon + version info into the .exe
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto       = true
strip     = true

# cargo-bundle metadata
[package.metadata.bundle]
name              = "rfshare"
identifier        = "dev.rfshare.app"
version           = "0.10.0"
copyright         = "Copyright © 2026 Imrany"
category          = "Utility"
short_description = "Fast, encrypted file transfers"
long_description  = "rfshare lets you instantly send files between devices on the same Wi-Fi using end-to-end encryption. No internet, no cloud, no accounts required."
icon              = ["assets/icon.png", "assets/icon.ico"]

[package.metadata.bundle.linux]
exec       = "rfshare"
categories = ["Network", "FileTransfer", "Utility", "RemoteAccess"]

[workspace]
members = [
    "relay",
]
