[package]
name        = "rfshare"
version     = "0.17.1"
edition     = "2024"
authors     = ["Imrany <imranmat254@gmail.com>"]
description = "Fast, encrypted file transfers"
homepage    = "https://rfshare.imrany.dev"
repository  = "https://github.com/imrany/rfshare"
license     = "MIT"
keywords    = ["file-transfer", "lan", "network", "encryption", "egui"]
categories  = ["network-programming", "gui"]
readme      = "README.md"

[[bin]]
name = "rfshare"
path = "src/main.rs"

[dependencies]
eframe       = { version = "0.33", features = ["default"] }
egui         = "0.33"
egui_extras  = { version = "0.33", features = ["image"] }
egui_material_icons = "0.5.0"
dirs         = "5"
rfd          = "0.15"

# Async & Futures (Required for Linux Bluetooth I/O)
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync","io-util"] }
futures      = "0.3"

# Crypto — end-to-end encryption
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm      = "0.10"
rand         = "0.8"
sha2         = "0.10"
btleplug = "0.12.0" # Standard cross-platform BLE implementation for macOS

# System tray & helpers
tray-icon    = "0.15"
image        = "0.25"
crossbeam-channel = "0.5.15"
minreq = { version = "2.14.1", features = ["https"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56.0"
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "winsock2", "ws2bth"] }
windows = { version = "0.58.0", features = ["Networking_Sockets", "Devices_Bluetooth"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
bluer = { version = "0.17", features = ["bluetoothd","rfcomm"] } # Explicitly enable rfcomm feature

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1

[package.metadata.bundle]
name              = "rfshare"
identifier        = "dev.rfshare.app"
version           = "0.16.0"
copyright         = "Copyright © 2026 Imrany"
category          = "Utility"
short_description = "Fast, encrypted file transfers"
long_description  = "rfshare lets you instantly send files between devices on Wi-Fi or Bluetooth using end-to-end encryption."
icon              = ["assets/icon.png", "assets/icon.ico"]

[package.metadata.bundle.linux]
exec       = "rfshare"
categories = ["Network", "FileTransfer", "Utility"]

[workspace]
members = ["relay"]
